fix collapsing card if not loaded activity image from AWS

--- a/src/pages/feed/GeneralFeed/FeedItemRenderer/FeedItemRenderer.module.scss
+++ b/src/pages/feed/GeneralFeed/FeedItemRenderer/FeedItemRenderer.module.scss
@@ -21,6 +21,7 @@
 .activityItem {
   margin-bottom: 16px;
   display: flex;
+  width: 100%;
 }
 
 .firstActivity {
